test/deca/context/valid/3_17_decl_null.deca
// Description:
//    Affectation et typage : type différent de void

// Résultat ; on définit un type null

class A {

}

{
    A a = null;
}