test/deca/context/invalid/2_5_field_void.deca
// Description:
//    field de type void
//
// Resultats:
//    Ligne 11: void type invalide

class A {
  void a;
}
